<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VelocityABCdarioLeandro</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="abcdario">ABCdário</string>
    <string name="iniciar">Iniciar</string>
    <string name="jogar">Jogar</string>
    <string name="aprender">Aprender</string>
    <string name="jogar_titulo">Jogar</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="sair">Sair</string>

</resources>